--- a/tool.ipynb
+++ b/tool.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# map model name"
+    "# Map Adobe model name"
    ]
   },
   {
@@ -77,8 +77,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# DDI log"
+    "# Extract DDI info"
    ]
   },
   {
@@ -127,12 +132,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## parse ddi log into json file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parse ddi log into json file\n",
+    "\n",
     "import json\n",
     "import csv\n",
     "import re\n",
@@ -310,12 +322,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## convert json to csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Convert json to csv\n",
+    "\n",
     "import glob\n",
     "import pandas as pd\n",
     "import os\n",
@@ -380,118 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# extract info from benchmark log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log_file = \"dml_log_release.txt\"\n",
-    "csv_file = \"dml_perf_release.csv\"\n",
-    "csvf = open(csv_file,\"w\",newline='')\n",
-    "writer = csv.writer(csvf)\n",
-    "line = [\"model name\",\"not save model\",\"save model\"]\n",
-    "writer.writerow(line)\n",
-    "with open(log_file,\"r\") as f:\n",
-    "    all_lines = f.readlines()\n",
-    "    idx = 0\n",
-    "    while idx < len(all_lines):\n",
-    "        line = all_lines[idx]\n",
-    "        if \"model_rename\" in line:\n",
-    "            model_name = line.rstrip().split(\"model_rename\\\\\")[-1]\n",
-    "            if \"Average inference\" not in all_lines[idx+6]:\n",
-    "                perf_save = all_lines[idx+10].rstrip().split(\"time cost:\")[-1]  \n",
-    "                writer.writerow([model_name, \"erro\", perf_save])\n",
-    "                idx = idx + 25\n",
-    "                print(idx)\n",
-    "            else:\n",
-    "                perf_nosave = all_lines[idx+6].rstrip().split(\"time cost:\")[-1]   \n",
-    "                perf_save = all_lines[idx+26].rstrip().split(\"time cost:\")[-1]\n",
-    "                writer.writerow( [model_name , perf_nosave, perf_save])\n",
-    "                idx = idx+41\n",
-    "csvf.close()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log_file = \"ov_log.txt\"\n",
-    "csv_file = \"ov_perf.csv\"\n",
-    "csvf = open(csv_file,\"w\",newline='')\n",
-    "writer = csv.writer(csvf)\n",
-    "line = [\"model name\",\"FP16\",\"FP32\"]\n",
-    "writer.writerow(line)\n",
-    "with open(log_file,\"r\") as f:\n",
-    "    all_lines = f.readlines()\n",
-    "    idx = 0\n",
-    "    while idx < len(all_lines):\n",
-    "        line = all_lines[idx]\n",
-    "        if \"model_rename\" in line:\n",
-    "            model_name = line.rstrip().split(\"model_rename\\\\\")[-1]\n",
-    "            print(model_name)\n",
-    "            if \"time cost\" not in all_lines[idx+6]:\n",
-    "                perf_save = all_lines[idx+7].rstrip().split(\"time cost:\")[-1]  \n",
-    "                writer.writerow([model_name, \"erro\", perf_save])\n",
-    "                idx = idx + 22\n",
-    "            else:\n",
-    "                perf_nosave = all_lines[idx+6].rstrip().split(\"time cost:\")[-1]   \n",
-    "                perf_save = all_lines[idx+26].rstrip().split(\"time cost:\")[-1]\n",
-    "                writer.writerow( [model_name , perf_nosave, perf_save])\n",
-    "                idx = idx+41\n",
-    "csvf.close()\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Convert ov time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perf_file = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\analyze\\Adobe-Ps_SuperZoom_V316.ov.txt\"\n",
-    "csv_file = perf_file.replace(\"txt\",'csv')\n",
-    "csvf = open(csv_file,\"w\",newline='')\n",
-    "writer = csv.writer(csvf)\n",
-    "line = [\"layer_type\",\"layer name\",\"gpu(ms)\",\"cpu(ms)\"]\n",
-    "writer.writerow(line)\n",
-    "total_time = 0\n",
-    "with open(perf_file, 'r') as f:\n",
-    "    for line in f.readlines():\n",
-    "        line_items = line.rstrip().split(\" \")\n",
-    "        info = [i for i in line_items if i != '']\n",
-    "        #print(info)\n",
-    "        layer_type = info[3]\n",
-    "        layer_name = info[0]\n",
-    "        gpu_time = int(info[5])/1000\n",
-    "        cpu_time = int(info[7])/1000\n",
-    "        total_time+=gpu_time\n",
-    "        if gpu_time == 0.0:\n",
-    "            continue\n",
-    "        writer.writerow([layer_type,layer_name, gpu_time,cpu_time])\n",
-    "print(\"total time: {:2f}\".format(total_time)) \n",
-    "csvf.close()     "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Convert DML time"
+    "# Extract PIX info"
    ]
   },
   {
@@ -585,8 +493,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze csv file\n",
-    "\n"
+    "# Extract info from benchmark.bat log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DML backend"
    ]
   },
   {
@@ -595,20 +509,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pandasForSortingCSV\n",
-    "def get_graph_info(file_csv,idx):\n",
-    "    # assign dataset\n",
-    "    csvData = pandasForSortingCSV.read_csv(file_csv)\n",
-    "    print(csvData.groupby(csvData.columns[idx]).sum() )\n",
-    "                                         \n",
-    "    # sort data frame\n",
-    "    # csvData.sort_values(csvData.columns[1], \n",
-    "    #                     axis=0,\n",
-    "    #                     inplace=True)                    \n",
-    "    \n",
-    "    # # displaying sorted data frame\n",
-    "    # print(\"\\nAfter sorting:\")\n",
-    "    # print(csvData)"
+    "log_file = \"dml_log_release.txt\"\n",
+    "csv_file = \"dml_perf_release.csv\"\n",
+    "csvf = open(csv_file,\"w\",newline='')\n",
+    "writer = csv.writer(csvf)\n",
+    "line = [\"model name\",\"not save model\",\"save model\"]\n",
+    "writer.writerow(line)\n",
+    "with open(log_file,\"r\") as f:\n",
+    "    all_lines = f.readlines()\n",
+    "    idx = 0\n",
+    "    while idx < len(all_lines):\n",
+    "        line = all_lines[idx]\n",
+    "        if \"model_rename\" in line:\n",
+    "            model_name = line.rstrip().split(\"model_rename\\\\\")[-1]\n",
+    "            if \"Average inference\" not in all_lines[idx+6]:\n",
+    "                perf_save = all_lines[idx+10].rstrip().split(\"time cost:\")[-1]  \n",
+    "                writer.writerow([model_name, \"erro\", perf_save])\n",
+    "                idx = idx + 25\n",
+    "                print(idx)\n",
+    "            else:\n",
+    "                perf_nosave = all_lines[idx+6].rstrip().split(\"time cost:\")[-1]   \n",
+    "                perf_save = all_lines[idx+26].rstrip().split(\"time cost:\")[-1]\n",
+    "                writer.writerow( [model_name , perf_nosave, perf_save])\n",
+    "                idx = idx+41\n",
+    "csvf.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OpenVINO backend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_file = \"ov_log.txt\"\n",
+    "csv_file = \"ov_perf.csv\"\n",
+    "csvf = open(csv_file,\"w\",newline='')\n",
+    "writer = csv.writer(csvf)\n",
+    "line = [\"model name\",\"FP16\",\"FP32\"]\n",
+    "writer.writerow(line)\n",
+    "with open(log_file,\"r\") as f:\n",
+    "    all_lines = f.readlines()\n",
+    "    idx = 0\n",
+    "    while idx < len(all_lines):\n",
+    "        line = all_lines[idx]\n",
+    "        if \"model_rename\" in line:\n",
+    "            model_name = line.rstrip().split(\"model_rename\\\\\")[-1]\n",
+    "            print(model_name)\n",
+    "            if \"time cost\" not in all_lines[idx+6]:\n",
+    "                perf_save = all_lines[idx+7].rstrip().split(\"time cost:\")[-1]  \n",
+    "                writer.writerow([model_name, \"erro\", perf_save])\n",
+    "                idx = idx + 22\n",
+    "            else:\n",
+    "                perf_nosave = all_lines[idx+6].rstrip().split(\"time cost:\")[-1]   \n",
+    "                perf_save = all_lines[idx+26].rstrip().split(\"time cost:\")[-1]\n",
+    "                writer.writerow( [model_name , perf_nosave, perf_save])\n",
+    "                idx = idx+41\n",
+    "csvf.close()\n"
    ]
   },
   {
@@ -616,7 +580,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anaylze time"
+    "# Extract OV info from `ORT_OPENVINO_ENABLE_DEBUG=1`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perf_file = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\analyze\\Adobe-Ps_SuperZoom_V316.ov.txt\"\n",
+    "csv_file = perf_file.replace(\"txt\",'csv')\n",
+    "csvf = open(csv_file,\"w\",newline='')\n",
+    "writer = csv.writer(csvf)\n",
+    "line = [\"layer_type\",\"layer name\",\"gpu(ms)\",\"cpu(ms)\"]\n",
+    "writer.writerow(line)\n",
+    "total_time = 0\n",
+    "with open(perf_file, 'r') as f:\n",
+    "    for line in f.readlines():\n",
+    "        line_items = line.rstrip().split(\" \")\n",
+    "        info = [i for i in line_items if i != '']\n",
+    "        #print(info)\n",
+    "        layer_type = info[3]\n",
+    "        layer_name = info[0]\n",
+    "        gpu_time = int(info[5])/1000\n",
+    "        cpu_time = int(info[7])/1000\n",
+    "        total_time+=gpu_time\n",
+    "        if gpu_time == 0.0:\n",
+    "            continue\n",
+    "        writer.writerow([layer_type,layer_name, gpu_time,cpu_time])\n",
+    "print(\"total time: {:2f}\".format(total_time)) \n",
+    "csvf.close()     "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract info from ORT profiling "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ORT time"
    ]
   },
   {
@@ -706,6 +715,13 @@
     "csvf.close()\n",
     "          \n",
     "          "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ORT memroy"
    ]
   },
   {
@@ -854,6 +870,13 @@
     "print(total_memory_size*2/1000000000)\n",
     "print(max_memory_size*2/1000000000)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Miscellaneous"
    ]
   },
   {
@@ -1084,6 +1107,37 @@
     "        if \"peak_rss\" not in line:\n",
     "            continue\n",
     "        print(line.rstrip())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyze csv file\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pandasForSortingCSV\n",
+    "def get_graph_info(file_csv,idx):\n",
+    "    # assign dataset\n",
+    "    csvData = pandasForSortingCSV.read_csv(file_csv)\n",
+    "    print(csvData.groupby(csvData.columns[idx]).sum() )\n",
+    "                                         \n",
+    "    # sort data frame\n",
+    "    # csvData.sort_values(csvData.columns[1], \n",
+    "    #                     axis=0,\n",
+    "    #                     inplace=True)                    \n",
+    "    \n",
+    "    # # displaying sorted data frame\n",
+    "    # print(\"\\nAfter sorting:\")\n",
+    "    # print(csvData)"
    ]
   }
  ],
