update the parameter for input padding

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -233,16 +233,16 @@
     "            for j in range(3):\n",
     "                filter_dilation.append(int(lines[outputdesc_idx+25+j].rstrip().split(\"=\")[-1],16))\n",
     "            \n",
-    "            filter_padding = []\n",
+    "            input_padding = []\n",
     "            for j in range(6):\n",
-    "                filter_padding.append(int(lines[outputdesc_idx+28+j].rstrip().split(\"=\")[-1],16))\n",
+    "                input_padding.append(int(lines[outputdesc_idx+28+j].rstrip().split(\"=\")[-1],16))\n",
     "            \n",
     "\n",
     "            \n",
     "            group_count =int( re.findall(r'0x\\w+', lines[outputdesc_idx+40])[0],16)\n",
     "            info_dic ={}\n",
-    "            info_dic[\"input\"] = {\"shape\": param_list[1:5], \"layout\": layout_str[0], \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+5])[0], \"flag\": re.findall(r'\\((.*?)\\)', lines[i+6])[0], \"stride\": input_stride}\n",
-    "            info_dic[\"filter\"] = {\"shape\": param_list[5:9], \"layout\": layout_str[1], \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+5 + 19])[0],\"flag\": re.findall(r'\\((.*?)\\)', lines[i+6+19])[0],\"stirde\": filter_stride, \"dilation\":filter_dilation,\"padding\": filter_padding,  \"groupcount\": group_count}\n",
+    "            info_dic[\"input\"] = {\"shape\": param_list[1:5], \"layout\": layout_str[0], \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+5])[0], \"flag\": re.findall(r'\\((.*?)\\)', lines[i+6])[0], \"stride\": input_stride, \"padding\": input_padding}\n",
+    "            info_dic[\"filter\"] = {\"shape\": param_list[5:9], \"layout\": layout_str[1], \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+5 + 19])[0],\"flag\": re.findall(r'\\((.*?)\\)', lines[i+6+19])[0],\"stirde\": filter_stride, \"dilation\":filter_dilation,  \"groupcount\": group_count}\n",
     "            info_dic[\"output\"] = {\"shape\":output_shape, \"layout\": layout_str[2], \"datatype\": re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+1])[0],\"flag\":re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+2])[0], \"stride\": output_stride,\"padding\":outputpadding_list}\n",
     "            info_dic[\"direction\"] = re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+20])[0]\n",
     "            \n",
@@ -344,8 +344,8 @@
     "csv_file = os.path.join(root_path,\"adobe_conv_ddilog.csv\")\n",
     "csvf = open(csv_file,\"w\",newline='')\n",
     "writer =csv.writer(csvf)\n",
-    "line = [\"model_name\", \"kernel_name\",\"input_shape_n\",\"input_shape_c\",\"input_shape_h\",\"input_shape_w\", \"input_layout\", \"input_datatype\",\"input_flag\",\\\n",
-    "        \"filter_shape_n\",\"filter_shape_c\",\"filter_shape_h\",\"filter_shape_w\", \"filter_layout\", \"filter_datatype\",\"filter_flag\", \"filter_stride_h\", \"filter_stride_w\", \"filter_stride_c\", \"filter_dilation_h\", \"filter_dilation_w\", \"filter_dilation_c\",\"filter_padding\", \"filter_groupcount\",\n",
+    "line = [\"model_name\", \"kernel_name\",\"input_shape_n\",\"input_shape_c\",\"input_shape_h\",\"input_shape_w\", \"input_layout\", \"input_datatype\",\"input_flag\",\"input_padding\",\\\n",
+    "        \"filter_shape_n\",\"filter_shape_c\",\"filter_shape_h\",\"filter_shape_w\", \"filter_layout\", \"filter_datatype\",\"filter_flag\", \"filter_stride_h\", \"filter_stride_w\", \"filter_stride_c\", \"filter_dilation_h\", \"filter_dilation_w\", \"filter_dilation_c\", \"filter_groupcount\",\n",
     "        \"output_shape_n\",\"output_shape_c\",\"output_shape_h\",\"output_shape_w\", \"output_layout\", \"output_datatype\",\"output_flag\", \"output_padding\", \n",
     "         \"direction\", \"activation\" ]\n",
     "writer.writerow(line)\n",
@@ -360,6 +360,7 @@
     "            input_layout = conv[key][i][\"input\"][\"layout\"]\n",
     "            input_datatype = conv[key][i][\"input\"][\"datatype\"]\n",
     "            input_flag = conv[key][i][\"input\"][\"flag\"]\n",
+    "            input_padding = [int(v) for v in  conv[key][i][\"input\"][\"padding\"]] \n",
     "\n",
     "            filter_shape = conv[key][i][\"filter\"][\"shape\"]\n",
     "            filter_layout = conv[key][i][\"filter\"][\"layout\"]\n",
@@ -367,7 +368,6 @@
     "            filter_flag = conv[key][i][\"filter\"][\"flag\"]\n",
     "            filter_stride = conv[key][i][\"filter\"][\"stirde\"]\n",
     "            filter_dilation = conv[key][i][\"filter\"][\"dilation\"]\n",
-    "            filter_padding =[int(v) for v in  conv[key][i][\"filter\"][\"padding\"]]\n",
     "            filter_groupcount = conv[key][i][\"filter\"][\"groupcount\"]\n",
     "\n",
     "            output_shape = conv[key][i][\"output\"][\"shape\"]\n",
@@ -379,8 +379,8 @@
     "            direction = conv[key][i][\"direction\"]\n",
     "            activation = conv[key][i][\"activation\"]\n",
     "\n",
-    "            writer.writerow([basename, kernel_name, input_shape[0], input_shape[1], input_shape[2], input_shape[3], input_layout, input_datatype, input_flag,\\\n",
-    "                              filter_shape[0],filter_shape[1],filter_shape[2],filter_shape[3], filter_layout, filter_datatype, filter_flag, filter_stride[0], filter_stride[1],filter_stride[2],filter_dilation[0],filter_dilation[1],filter_dilation[2], filter_padding, filter_groupcount, \\\n",
+    "            writer.writerow([basename, kernel_name, input_shape[0], input_shape[1], input_shape[2], input_shape[3], input_layout, input_datatype, input_flag,input_padding,\\\n",
+    "                              filter_shape[0],filter_shape[1],filter_shape[2],filter_shape[3], filter_layout, filter_datatype, filter_flag, filter_stride[0], filter_stride[1],filter_stride[2],filter_dilation[0],filter_dilation[1],filter_dilation[2], filter_groupcount, \\\n",
     "                                output_shape[0],output_shape[1],output_shape[2],output_shape[3], output_layout, output_datatype, output_flag, output_padding,\n",
     "                                direction, activation])\n",
     "    \n",
