update the script for PIX log

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -411,24 +411,36 @@
     "import os\n",
     "import csv\n",
     "import pandas as pd\n",
-    "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\analyze\\Adobe-Ps_Lama512_V1\"\n",
+    "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\"\n",
     "log_file = \"PIX_log.txt\"\n",
     "file = os.path.join(rootpath, log_file)\n",
     "file = file.strip(\".txt\")\n",
     "rawdata = pd.read_csv(f\"{file}.txt\",delimiter = '\\t')\n",
     "\n",
     "signal_count = 0\n",
-    "first_iteration = 0\n",
-    "second_iteration = 3207\n",
-    "# # find first iteration and second iteration\n",
-    "# for index, line in rawdata.iterrows():\n",
-    "#     if signal_count == 5:\n",
-    "#         first_iteration = index\n",
-    "#     if signal_count == 10:\n",
-    "#         second_iteration = index\n",
-    "#         break\n",
-    "#     if \"Signal\" in line :\n",
-    "        # signal_count +=0\n",
+    "first_iteration_start = 0\n",
+    "second_iteration_start = 0  \n",
+    "## Option 1:\n",
+    "#  use \"DML_EXECUTION_PLAN\" to find where is the start of first_iteration and second iteration\n",
+    "#  value = line number - 1\n",
+    "#  \n",
+    "## Option 2:\n",
+    "#  use the algorithm below to find first iteration and second iteration\n",
+    "#  but mostly the time it does not work\n",
+    "'''\n",
+    "for index, line in rawdata.iterrows():\n",
+    "    if signal_count == 5:\n",
+    "        first_iteration = index\n",
+    "    if signal_count == 10:\n",
+    "        second_iteration = index\n",
+    "        break\n",
+    "    if \"Signal\" in line :\n",
+    "        signal_count +=0\n",
+    "'''\n",
+    "## Option 3: [todo] use the whole information to decide\n",
+    "\n",
+    "first_iteration_start = 180\n",
+    "second_iteration_start = 960\n",
     "prevline = \"\"\n",
     "ex_operator_list=[]\n",
     "ex_time = []\n",
@@ -440,13 +452,12 @@
     "idx = -1\n",
     "while idx < len(rawdata)-2: \n",
     "    idx+=1\n",
-    "    if idx < first_iteration:\n",
+    "    if idx < first_iteration_start:\n",
     "        continue\n",
-    "    # if idx > second_iteration:\n",
-    "    #     break\n",
+    "    if idx > second_iteration_start:\n",
+    "        break\n",
     "    line = rawdata.iloc[idx]\n",
-    "    if \"ExecuteMetaCommand\" in line[2]:\n",
-    "        \n",
+    "    if \"ExecuteMetaCommand\" in line[2]:      \n",
     "        ex_operator_list.append((prevline[2].strip()))\n",
     "        ex_time.append(int(prevline[4]))\n",
     "        # temp.append(line)\n",
@@ -455,14 +466,17 @@
     "            continue\n",
     "        dispatch_operator_list.append((prevline[2].strip()))\n",
     "        dispatch_time.append(int(prevline[4]))\n",
-    "        pre_checkDispatch = True\n",
-    "    \n",
+    "        pre_checkDispatch = True \n",
     "    else:\n",
     "        prevline = line\n",
     "        pre_checkDispatch = False\n",
     "\n",
-    "sumup= (sum(dispatch_time) + sum(ex_time))/1000000/11\n",
-    "print(sumup)\n",
+    "sumup= (sum(dispatch_time) + sum(ex_time))/1000000\n",
+    "print(\"total latency per iteration: {} ms \\n \\\n",
+    "      Tip: if the data is too different from ort_perf_test.exe,\\n \\\n",
+    "      please double check the first/second iteration number\".format(round(sumup,2)))\n",
+    "\n",
+    "\n",
     "csv_file = f\"{file}_test.csv\"\n",
     "csvf = open(csv_file,\"w\",newline='')\n",
     "writer = csv.writer(csvf)\n",
@@ -485,7 +499,7 @@
     "\n",
     "\n",
     "csvf.close()\n",
-    "print(\"Complete\")"
+    "print(\"{} generated\".format(csv_file))"
    ]
   },
   {
