Update the methodology about dumping ORT_OV performance data

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -594,7 +594,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract OV info from `ORT_OPENVINO_ENABLE_DEBUG=1`"
+    "# Extract OV performance data\n",
+    "## Option 1 if you have ort_perf_test.exe debug version:\n",
+    "1. set `ORT_OPENVINO_ENABLE_DEBUG=1`, and run ort_perf_test.exe with ORT_OV backend\n",
+    "2. some performance logs will be appeared in the command window, need to manually save it and process into csv file [The script below is some reference but it is not very good]\n",
+    "## Option 2\n",
+    "1. set python environment: pip install openvino_dev\n",
+    "2. this package contains a tool called benchmark_app\n",
+    "3. run benchmark_app with the command line\n",
+    "`benchmark_app -m your_onnx_model_path -d GPU -nireq 1 -niter 10 --report_type detailed_counters --report_folder perf\\`\n",
+    "4. after running this, a performance csv file will be generated under `perf\\` folder\n",
+    "\n",
+    "\n",
+    "> I think the performance result in Option2 is validated for profiling ORT_OV performance because  I have checked the pipeline in onnxruntime ov. From my understanding, ort only did some work about parsing onnx model and rest of the works are all handled by OV"
    ]
   },
   {
