Update the example of ov performance data

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -596,8 +596,21 @@
    "source": [
     "# Extract OV performance data\n",
     "## Option 1 if you have ort_perf_test.exe debug version:\n",
-    "1. set `ORT_OPENVINO_ENABLE_DEBUG=1`, and run ort_perf_test.exe with ORT_OV backend\n",
-    "2. some performance logs will be appeared in the command window, need to manually save it and process into csv file [The script below is some reference but it is not very good]\n",
+    "1. set `ORT_OPENVINO_ENABLE_DEBUG=1`, and run `ort_perf_test.exe  -m times -r 1 -I -e openvino -i \"device_type|GPU_FP32 cache_dir|ov_cache\" onnx_model_path`\n",
+    "2. some performance logs will be appeared in the command window, here is an example below. You need to manually save it and process into csv file [The script below is some reference but it is not very good]\n",
+    "```\n",
+    "convolution10/WithoutBiases   EXECUTED       layerType: Convolution        realTime: 374       cpu: 0               execType: jit:ir__f16\n",
+    "convolution10                 OPTIMIZED_OUT  layerType: Add                realTime: 0         cpu: 0               execType: undef\n",
+    "activation10                  OPTIMIZED_OUT  layerType: Relu               realTime: 0         cpu: 0               execType: undef\n",
+    "convolution11/WithoutBiases   EXECUTED       layerType: Convolution        realTime: 330       cpu: 0               execType: jit:ir__f16\n",
+    "convolution11                 OPTIMIZED_OUT  layerType: Add                realTime: 0         cpu: 0               execType: undef\n",
+    "activation11                  OPTIMIZED_OUT  layerType: Relu               realTime: 0         cpu: 0               execType: undef\n",
+    "convolution12/WithoutBiases   EXECUTED       layerType: Convolution        realTime: 294       cpu: 0               execType: jit:ir__f16\n",
+    "convolution12                 OPTIMIZED_OUT  layerType: Add                realTime: 0         cpu: 0               execType: undef\n",
+    "activation12                  OPTIMIZED_OUT  layerType: Relu               realTime: 0         cpu: 0               execType: undef\n",
+    "```\n",
+    "3. The parsed onnx model will also be saved as `OpenVINOExecutionProvider_OpenVINO-EP-subgraph_1_0.onnx`, you can use this model to run `openvino benchmark_app` if the original model cannot be parsed by openvino\n",
+    "\n",
     "## Option 2\n",
     "1. set python environment: pip install openvino_dev\n",
     "2. this package contains a tool called benchmark_app\n",
