update for output config

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -734,9 +734,9 @@
     "            filter_stride =  pool[key][i][\"filter\"][\"stride\"]\n",
     "            filter_padding =  pool[key][i][\"filter\"][\"padding\"]\n",
     "\n",
-    "            output_shape = pool[key][i][\"input\"][\"shape\"]\n",
-    "            output_datatype = pool[key][i][\"input\"][\"datatype\"]\n",
-    "            output_flag = pool[key][i][\"input\"][\"flag\"]\n",
+    "            output_shape = pool[key][i][\"output\"][\"shape\"]\n",
+    "            output_datatype = pool[key][i][\"output\"][\"datatype\"]\n",
+    "            output_flag = pool[key][i][\"output\"][\"flag\"]\n",
     "\n",
     "            writer.writerow([basename, kernel_name, pool_function,\n",
     "                             input_shape[0], input_shape[1], input_shape[2], input_shape[3],input_datatype, input_flag, \\\n",
