--- a/tool.ipynb
+++ b/tool.ipynb
@@ -457,6 +457,9 @@
     "            if kernel_name not in dic[mc_type].keys():\n",
     "                dic[mc_type][kernel_name] = []      \n",
     "\n",
+    "           \n",
+    "            layout_list = re.findall(r'N\\w+', lines[i+4]) \n",
+    "\n",
     "            input_shape = []\n",
     "            for j in range(4):\n",
     "                input_shape.append(int(lines[i+9+j].rstrip().split(\"=\")[-1],16))\n",
@@ -491,10 +494,10 @@
     "                padding_size.append(int(lines[outputdesc_idx +  27 +j].rstrip().split(\"=\")[-1],16))    \n",
     "\n",
     "            '''m_PoolingParams.PoolingType is not kernel size'''\n",
-    "            info_dic[\"input\"] = {\"shape\": input_shape,  \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+6])[0], \"flag\": re.findall(r'\\((.*?)\\)', lines[i+7])[0]}\n",
+    "            info_dic[\"input\"] = {\"layout\": layout_list[0],\"shape\": input_shape,  \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+6])[0], \"flag\": re.findall(r'\\((.*?)\\)', lines[i+7])[0]}\n",
     "            info_dic[\"filter\"] = {\"shape\": kernel_size, \"stride\": stride, \"padding\": padding_size}\n",
     "            info_dic[\"pool_function\"] = pooling_function\n",
-    "            info_dic[\"output\"] = {\"shape\":output_shape,   \"datatype\": re.findall(r'\\((.*?)\\)', lines[outputdesc_idx + 1])[0], \"flag\": re.findall(r'\\((.*?)\\)', lines[outputdesc_idx + 2])[0]}\n",
+    "            info_dic[\"output\"] = {\"layout\": layout_list[1], \"shape\":output_shape,   \"datatype\": re.findall(r'\\((.*?)\\)', lines[outputdesc_idx + 1])[0], \"flag\": re.findall(r'\\((.*?)\\)', lines[outputdesc_idx + 2])[0]}\n",
     "            \n",
     "            dic[mc_type][kernel_name].append(info_dic)   \n",
     "\n",
@@ -549,7 +552,7 @@
     "for file in files:\n",
     "    basename = os.path.basename(file)\n",
     "    #print(basename)\n",
-    "    create_ddiGEMM_json(root_path, basename)"
+    "    create_ddiPool_json(root_path, basename)"
    ]
   },
   {
@@ -710,10 +713,11 @@
     "csv_file = os.path.join(root_path,\"Adobe_Pooling.csv\")\n",
     "csvf = open(csv_file,\"w\",newline='')\n",
     "writer =csv.writer(csvf)\n",
+    "# the name is mapping to https://onnx.ai/onnx/operators/onnx__MaxPool.html#maxpool\n",
     "line = [\"model_name\", \"kernel_name\",\"pool_function\", \\\n",
-    "        \"input_shape_n\",\"input_shape_c\",\"input_shape_h\",\"input_shape_w\", \"input_datatype\",\"input_flag\",\\\n",
-    "       \"filter_shape_h\",\"filter_shape_w\", \"filter_stride_h\", \"filter_stride_w\",\"filter_padding\",\\\n",
-    "       \"output_shape_n\",\"output_shape_c\", \"output_shape_h\",\"output_shape_w\", \"output_datatype\",\"output_flag\" ]\n",
+    "       \"input_layout\", \"input_shape_n\",\"input_shape_c\",\"input_shape_h\",\"input_shape_w\", \"input_datatype\",\"input_flag\",\\\n",
+    "       \"kernel_shape_h\",\"kernel_shape_w\", \"stride_h\", \"stride_w\",\"pads\",\\\n",
+    "       \"output_layout\", \"output_shape_n\",\"output_shape_c\", \"output_shape_h\",\"output_shape_w\", \"output_datatype\",\"output_flag\" ]\n",
     "writer.writerow(line)\n",
     "for file in files:\n",
     "    basename = os.path.basename(file)\n",
@@ -726,6 +730,7 @@
     "        kernel_name = key\n",
     "        for i in range(len(pool[key])):\n",
     "            pool_function = pool[key][i][\"pool_function\"]\n",
+    "            input_layout = pool[key][i][\"input\"][\"layout\"]\n",
     "            input_shape = pool[key][i][\"input\"][\"shape\"]\n",
     "            input_datatype = pool[key][i][\"input\"][\"datatype\"]\n",
     "            input_flag = pool[key][i][\"input\"][\"flag\"]\n",
@@ -734,16 +739,32 @@
     "            filter_stride =  pool[key][i][\"filter\"][\"stride\"]\n",
     "            filter_padding =  pool[key][i][\"filter\"][\"padding\"]\n",
     "\n",
+    "            output_layout = pool[key][i][\"output\"][\"layout\"]\n",
     "            output_shape = pool[key][i][\"output\"][\"shape\"]\n",
     "            output_datatype = pool[key][i][\"output\"][\"datatype\"]\n",
     "            output_flag = pool[key][i][\"output\"][\"flag\"]\n",
     "\n",
     "            writer.writerow([basename, kernel_name, pool_function,\n",
-    "                             input_shape[0], input_shape[1], input_shape[2], input_shape[3],input_datatype, input_flag, \\\n",
+    "                             input_layout, input_shape[0], input_shape[1], input_shape[2], input_shape[3],input_datatype, input_flag, \\\n",
     "                                filter_shape[0],filter_shape[1], filter_stride[0],filter_stride[1], filter_padding,\\\n",
-    "                                output_shape[0], output_shape[1], output_shape[2], output_shape[3],output_datatype, output_flag ])\n",
+    "                                output_layout, output_shape[0], output_shape[1], output_shape[2], output_shape[3],output_datatype, output_flag ])\n",
     "    \n",
     "csvf.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def round_up_next_multiple(n,m):\n",
+    "    return ((n + m - 1) / m) * m\n",
+    "\n",
+    "values = \"-0.125488;0.279785;-0.343994;-0.166260;-0.479492;0.438477;-0.316650;-0.492920;0.111877;0.473877;0.285156;0.483154;0.107544;-0.486816;0.308350;-0.269043;-0.377930;-0.326660;0.162476;-0.291992;0.469482;-0.104858;0.421875;0.020828;-0.111328;0.086731;0.042694;-0.334717;0.272217;-0.485840;0.229004;0.426270;0.363037;-0.404541;-0.174805;-0.225220;-0.380371;0.221680;-0.006203;-0.389160;-0.468506;0.063293;-0.250732;-0.296875;-0.210205;0.124329;0.371582;-0.083496;0.307373;0.406738;-0.072876;-0.195190;-0.082581;-0.230591;-0.176758;-0.096191;0.462402;0.212280;-0.463135;-0.088989;0.408203;0.030930;-0.258057;-0.130371;-0.132202;-0.101196;0.335205;0.195801;0.177612;0.309570;-0.325684;0.017746;-0.158936;0.041443;0.160034;0.016632;-0.406982;0.382568;-0.150757;0.356445;0.296631;0.098633;-0.400146;0.101135;-0.443604;-0.287598;0.117493;-0.068054;-0.100159;-0.133667;0.118408;0.092407;0.180298;0.448975;-0.114563;0.184204;0.109985;0.409424;0.255371;0.046722;0.342285;0.394775;-0.173462;-0.454834;0.247314;-0.143188;-0.223999;-0.425537;-0.105103;0.315430;0.290283;-0.141479;0.350098;-0.436523;0.165894;0.387207;0.471680;0.061279;-0.459473;-0.474609;0.395752;0.008568;0.104431;-0.271240;0.194824;0.308105;-0.043457;0.392578;-0.377930;-0.389893;-0.499512;-0.493164;-0.015167;-0.162354;-0.281250;-0.136353;-0.253174;-0.199097;-0.233276;-0.448486;0.134399;-0.010544;0.092712;-0.262451;-0.029694;0.035767;-0.349365;-0.459229;-0.279785;-0.273438;0.440430;0.436768;0.235229;0.377441;-0.324951;0.029648;0.465332;0.133057;0.200317;0.387207;0.450684;0.096863;-0.441895;-0.357178;0.469971;-0.499268;-0.195801;-0.477051;-0.360596;-0.267334;-0.300293;-0.033234;-0.329590;0.442139;-0.195435;-0.259033;-0.004822;-0.108948;-0.188232;0.067688;0.275146;0.426758;-0.411621;0.461182;-0.228638;0.465332;-0.359131;-0.484375;-0.301270;-0.301270;0.271240;0.151123;0.123291;-0.129150;0.229614;0.061249;0.213257;-0.263916;0.022736;-0.060669;0.136353;0.195557;-0.089600;0.442871;-0.338867;-0.204346;0.303711;0.383301;0.395996;-0.227905;0.318115;-0.335449;-0.277832;-0.255859;0.018784;-0.435059;-0.248169;-0.351807;0.109558;-0.467041;-0.260498;-0.052216;0.172119;-0.257812;0.132324;0.316406;-0.179199;0.358398;-0.483398;-0.151367;0.190918;0.337646;-0.386475;0.195801;0.317139;-0.239136;0.397217;-0.311279;0.225952;-0.095520;-0.316650;-0.343994;-0.040741;0.208130;0.222046;-0.318115;0.111633;-0.208740;-0.453369;-0.043915;-0.117554;-0.453613;-0.049500;0.465576;-0.484131;-0.059845;0.333252;-0.241211;-0.074829;-0.315186;-0.050232;0.097900;0.070435;-0.174683;0.039703;-0.219116;-0.203735;0.486816;-0.206543;0.206909;0.105957;-0.384033;-0.050537;-0.188965;0.091309;-0.027786;0.348877;0.270996;0.210693;-0.392090;-0.024628;0.407471;0.039856;-0.423096;0.380371;0.133423;-0.281494;0.039337;-0.143677;-0.271973;-0.147461;0.010750;0.192383;0.442871;0.058105;0.471680;0.196289;-0.215210;0.476562;-0.221313;0.180664;0.485596;-0.419189;0.228271;0.483398;-0.409668;0.008202;0.090881;0.211182;0.145142;-0.102417;-0.362549;-0.291016;-0.242065;0.482178;-0.258057;0.058289;-0.161011;0.346680;0.279785;0.231934;-0.054169;0.366211;0.150879;0.332520;0.492188;0.024750;0.024780;-0.207886;-0.409424;0.014236;0.359863;-0.435059;0.063293;-0.402344;0.183228;-0.465576;-0.317871;0.020065;-0.468750;0.439453;0.227295;-0.303955;0.344482;0.328857;0.107056;0.302246;-0.076599;-0.494385;0.211304;-0.426025;0.415039;-0.169067;0.168823;0.137573;-0.117065;0.260742;-0.243896;-0.072449;-0.298340;-0.185669;-0.360596;0.255615;0.098877;0.429688;-0.394531;-0.313477;-0.175659;-0.182007;0.147705;0.360840;0.034088;-0.380127;-0.331787;0.203003;-0.246094;-0.002752;0.497803;0.002680;-0.154907;-0.355225;0.052887;0.261719;0.303223;0.133545;0.298340;-0.313477;-0.174072;0.012093;-0.403809;-0.113281;0.175659;0.424805;-0.271484;0.055206;0.496338;0.400391;-0.221069;0.397217;0.387695;0.279785;-0.343994;-0.166260;-0.479492;0.438477;-0.316650;-0.492920;0.111877;0.473877;0.285156;0.483154;0.107544;-0.486816;0.308350;-0.269043;-0.377930;-0.326660;0.162476;-0.291992;0.469482;-0.104858;0.421875;0.020828;-0.111328;0.086731;0.042694;-0.334717;0.272217;-0.485840;0.229004;0.426270;0.363037;-0.404541;-0.174805;-0.225220;-0.380371;0.221680;-0.006203;-0.389160;-0.468506;0.063293;-0.250732;-0.296875;-0.210205;0.124329;0.371582;-0.083496;0.307373;0.406738;-0.072876;-0.195190;-0.082581;-0.230591;-0.176758;-0.096191;0.462402;0.212280;-0.463135;-0.088989;0.408203;0.030930;-0.258057;-0.130371;-0.132202;-0.101196;0.335205;0.195801;0.177612;0.309570;-0.325684;0.017746;-0.158936;0.041443;0.160034;0.016632;-0.406982;0.382568;-0.150757;0.356445;0.142090;0.098633;-0.400146;0.101135;-0.443604;-0.287598;0.117493;-0.068054;-0.100159;-0.133667;0.118408;0.092407;0.180298;0.448975;-0.114563;0.184204;0.109985;0.409424;0.255371;0.046722;0.342285;0.394775;-0.173462;-0.454834;0.247314;-0.143188;-0.223999;-0.425537;-0.105103;0.315430;0.290283;-0.141479;0.350098;-0.436523;0.165894;0.387207;0.471680;0.061279;-0.459473;-0.474609;0.395752;0.008568;0.104431;-0.271240;0.194824;0.308105;-0.043457;0.392578;-0.377930;-0.389893;-0.499512;-0.493164;-0.015167;-0.162354;-0.281250;-0.136353;-0.253174;-0.199097;-0.233276;-0.448486;0.134399;-0.010544;0.092712;-0.262451;-0.029694;0.035767;-0.349365;-0.459229;-0.279785;-0.273438;0.440430;0.436768;0.235229;0.377441;-0.324951;0.029648;0.465332;0.133057;0.200317;0.387207;0.350830;0.096863;-0.441895;-0.357178;0.469971;-0.499268;-0.195801;-0.477051;-0.360596;-0.267334;-0.300293;-0.033234;-0.329590;0.442139;-0.195435;-0.259033;-0.004822;-0.108948;-0.188232;0.067688;0.275146;0.426758;-0.411621;0.461182;-0.228638;0.465332;-0.359131;-0.484375;-0.301270;-0.301270;0.271240;0.151123;0.123291;-0.129150;0.229614;0.061249;0.213257;-0.263916;0.022736;-0.060669;0.136353;0.195557;-0.089600;0.442871;-0.338867;-0.204346;0.303711;0.383301;0.395996;-0.227905;0.318115;-0.335449;-0.277832;-0.255859;0.018784;-0.435059;-0.248169;-0.351807;0.109558;-0.467041;-0.260498;-0.052216;0.172119;-0.257812;0.132324;0.316406;-0.179199;0.358398;-0.483398;-0.151367;0.190918;0.337646;-0.386475;0.195801;0.317139;-0.239136;0.397217;-0.311279;0.225952;-0.095520;-0.415771\"\n",
+    "values_list = [float(i) for i in values.split(\";\")]\n",
+    "print(len(values_list[::5]))\n",
+    "print(values_list[::5])"
    ]
   },
   {
