Add onnxruntime related execution script

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "# Inference onnx model with DML \n",
-    "> onnxruntime-directml needed"
+    "> onnxruntime-directml package needed"
    ]
   },
   {
@@ -33,7 +33,8 @@
     "import onnxruntime as ort\n",
     "import numpy as np\n",
     "import onnx\n",
-    "model_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\model_rename\\Adobe-Lr_dn_bayerlinear_mgnet704.onnx\"\n",
+    "model_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\model_rename\\Adobe-Lr_dn_bayerlinear1024.onnx\"\n",
+    "#model_path = \"test.onnx\"\n",
     "model = onnx.load(model_path)   \n",
     "data_dic = {}\n",
     "def switch_case(input_datatype):\n",
@@ -50,10 +51,156 @@
     "    data_dic[input_name] = input_data\n",
     "\n",
     "sess_options = ort.SessionOptions()\n",
-    "providers = [\"DmlExecutionProvider\"]\n",
-    "sess = ort.InferenceSession(model_path, sess_options=sess_options,providers=providers)\n",
-    "output = sess.run(None, data_dic)\n",
-    "print(output)"
+    "dml_provider = [\"DmlExecutionProvider\"]\n",
+    "ref_provider = [\"CPUExecutionProvider\"]\n",
+    "\n",
+    "sess = ort.InferenceSession(model_path, sess_options=sess_options,providers=dml_provider)\n",
+    "output_name = sess.get_outputs()[0].name\n",
+    "\n",
+    "dml_output = sess.run([output_name], data_dic)\n",
+    "print(dml_output)\n",
+    "\n",
+    "sess = ort.InferenceSession(model_path, sess_options=sess_options,providers=ref_provider)\n",
+    "ref_output = sess.run([output_name], data_dic)\n",
+    "print(ref_output)\n",
+    "\n",
+    "# you can compare the dml_output and ref_output manually but there will be still small gaps because the precision difference beween GPU and CPU "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print the output in middle layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import onnxruntime as rt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import onnx\n",
+    "from onnx import helper\n",
+    "\n",
+    "model_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\model_rename\\Adobe-Lr_dn_bayerlinear1024.onnx\"\n",
+    "#######################################################################\n",
+    "'''\n",
+    "ref: https://github.com/microsoft/onnxruntime/issues/1455#issuecomment-514805365\n",
+    "This is ONNX debug\n",
+    "The purpose is to inspect the desired intermediate layer from onnx\n",
+    "\n",
+    "Flow:\n",
+    "    - A. Load the model and do some sanity check on it\n",
+    "    - A*. You could inspect the input/output here\n",
+    "    - B. Get the model node (length and node names in string)\n",
+    "        *Add this step, you could use any editor, and CTRL+F your desired layer\n",
+    "        in my case, I want to get Resnet101 with block4 output\n",
+    "    - C. Put the name into some variables\n",
+    "    - D. Add the intermediate layers' name into the helper function\n",
+    "    - E. Add the helper function into model output\n",
+    "    - F. Save the model with the added outputs\n",
+    "    - G. Load the customized model\n",
+    "    - H. Inspect the new I/O's names of the customized model here\n",
+    "    - I. Do some inference on your image, and get/save the output\n",
+    "    \n",
+    "'''\n",
+    "\n",
+    "# Step A\n",
+    "# load and check that the model is correct or not\n",
+    "model = onnx.load(model_path)\n",
+    "#onnx.checker.check_model(model)\n",
+    "\n",
+    "# Step A*\n",
+    "#sess = rt.InferenceSession(os.path.join(path,'frozen.onnx'))\n",
+    "##sess = rt.InferenceSession('D:\\\\embedmask_simplifier.onnx')\n",
+    "#input1 = sess.get_inputs()[0].name\n",
+    "#outputs = sess.run([], {input1: img_preprocess})\n",
+    "\n",
+    "# Step B\n",
+    "# get the output of block 4 add and relu operation for each add layer\n",
+    "node_count = len(model.graph.node)\n",
+    "model_node = str(model.graph.node)\n",
+    "\n",
+    "# Step C\n",
+    "# find the name first\n",
+    "unit1_name = '/model/model/encoders.0/encoders.0.0/act/LeakyRelu_output_0'\n",
+    "unit2_name = '/model/model/encoders.0/encoders.0.0/conv2/Conv_output_0'\n",
+    "\n",
+    "# Step D\n",
+    "# add into the current onnx model and save to a new model\n",
+    "info_unit1_name = helper.ValueInfoProto()\n",
+    "info_unit1_name.name = unit1_name\n",
+    "info_unit2_name = helper.ValueInfoProto()\n",
+    "info_unit2_name.name = unit2_name\n",
+    "\n",
+    "# Step E\n",
+    "model.graph.output.extend([info_unit1_name,info_unit2_name])\n",
+    "\n",
+    "# Step F\n",
+    "onnx.save(model, os.path.join('frozen_out.onnx'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## save ONNX subgraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skl2onnx.helpers.onnx_helper import select_model_inputs_outputs\n",
+    "from skl2onnx.helpers.onnx_helper import save_onnx_model\n",
+    "from skl2onnx.helpers.onnx_helper import enumerate_model_node_outputs\n",
+    "from skl2onnx.helpers.onnx_helper import load_onnx_model\n",
+    "model_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\model_rename\\Adobe-Lr_dn_bayerlinear1024.onnx\"\n",
+    "model_onnx = load_onnx_model(model_path)\n",
+    "# for out in enumerate_model_node_outputs(model_onnx):\n",
+    "#     print(out)\n",
+    "\n",
+    "\"\"\"\n",
+    "/model/model/intro/Conv_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/conv1/Conv_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/act/LeakyRelu_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/conv2/Conv_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/Mul_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/Add_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/conv3/Conv_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/act_1/LeakyRelu_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/conv4/Conv_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/Mul_1_output_0\n",
+    "/model/model/encoders.0/encoders.0.0/Add_1_output_0\n",
+    "/model/model/downs.0/Conv_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/conv1/Conv_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/act/LeakyRelu_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/conv2/Conv_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/Mul_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/Add_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/conv3/Conv_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/act_1/LeakyRelu_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/conv4/Conv_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/Mul_1_output_0\n",
+    "/model/model/encoders.1/encoders.1.0/Add_1_output_0\n",
+    "/model/model/encoders.1/encoders.1.1/conv1/Conv_output_0\n",
+    "/model/model/encoders.1/encoders.1.1/act/LeakyRelu_output_0\n",
+    "/model/model/encoders.1/encoders.1.1/conv2/Conv_output_0\n",
+    "...\n",
+    "/model/model/ups.2/ups.2.0/Resize_output_0\n",
+    "/model/model/ups.3/ups.3.0/Resize_input_cast_0\n",
+    "/model/model/ups.3/ups.3.0/Resize_input_cast_2\n",
+    "/model/model/ups.3/ups.3.0/Resize_output_\n",
+    "\"\"\"\n",
+    "\n",
+    "num_onnx = select_model_inputs_outputs(model_onnx, '/model/model/encoders.0/encoders.0.0/conv3/Conv_output_0')\n",
+    "save_onnx_model(num_onnx, \"test2.onnx\")"
    ]
   },
   {
