--- a/tool.ipynb
+++ b/tool.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "# Inference onnx model with DML \n",
-    "> onnxruntime-directml package needed"
+    "> related packages need to be installed, e.g. `onnxruntime-directml,onnx,skl2onnx`"
    ]
   },
   {
