--- a/tool.ipynb
+++ b/tool.ipynb
@@ -322,7 +322,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Parse ddi log into json file"
+    "## Parse ddi log into json file\n",
+    "> *todo*: sometimes, the kernel is failed, but the related kernel information will be still dumped in the log. Need to be handled during parsing"
    ]
   },
   {
